# premier-league-pymc-demo

./: README.md  demo.ipynb  pyproject.toml
